# poc-kafka-consumer

./: .dockerignore  Cargo.toml  Dockerfile  README.md  event-store-docker-compose.yml
src/: main TESTING passing of topics.rs  main-DOES NOT GET EVENTS.rs  main-WORKING.rs  main.rs
